# velocity

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: deps.cmake  ffmpeg.cmake  qt.cmake
docs/: 00-vision-and-scope.md  01-technology-stack.md  02-system-architecture.md  03-project-format.md  04-media-io-ffmpeg.md  05-playback-engine.md  06-render-engine-gpu.md  07-audio-engine.md  08-concurrency-and-memory.md  09-cache-strategy.md  10-export-pipeline.md  11-ui-architecture.md  12-plugin-architecture.md  13-quality-testing-ci.md  14-roadmap-risks.md  PROGRESS.md
landing/: index.html  script.js  style.css
src/audio/: CMakeLists.txt
src/audio/include/velocity/audio/: output.h
src/audio/src/: output.cpp
src/engine/: CMakeLists.txt
src/engine/include/velocity/engine/: audio_mix.h  compile.h  compositor.h  edits.h  export.h  model.h  project_io.h
src/engine/src/: audio_mix.cpp  compile.cpp  compositor.cpp  edits.cpp  export.cpp  project_io.cpp
src/foundation/: CMakeLists.txt
src/foundation/include/velocity/foundation/: expected.h  log.h  time.h
src/foundation/src/: log.cpp
src/gpu/: CMakeLists.txt
src/gpu/include/velocity/gpu/: device.h  swapchain.h  window.h
src/gpu/src/: device.cpp  swapchain.cpp  window.cpp
src/main/: CMakeLists.txt  main.cpp
src/media/: CMakeLists.txt
src/media/include/velocity/media/: audio_decoder.h  error.h  ffmpeg_info.h  frame_rgba.h  mp4_writer.h  probe.h  sequential_reader.h  video_decoder.h
src/media/src/: audio_decoder.cpp  ffmpeg_info.cpp  ffmpeg_util.h  frame_rgba.cpp  mp4_writer.cpp  probe.cpp  video_decoder.cpp
src/ui/: CMakeLists.txt
src/ui/exportdlg/: export_dialog.cpp  export_dialog.h
src/ui/inspector/: inspector_widget.cpp  inspector_widget.h
src/ui/mixer/: mixer_widget.cpp  mixer_widget.h
src/ui/playback/: playback_controller.cpp  playback_controller.h
src/ui/preview/: previewwidget.cpp  previewwidget.h
src/ui/services/: frame_conversion.cpp  frame_conversion.h  thumbnail_cache.cpp  thumbnail_cache.h  waveform_cache.cpp  waveform_cache.h
src/ui/shell/: documentsession.cpp  documentsession.h  icons.cpp  icons.h  mainwindow.cpp  mainwindow.h  theming.cpp  theming.h
src/ui/timeline/: timeline_widget.cpp  timeline_widget.h
tests/unit/: CMakeLists.txt  audio_mix_tests.cpp  audio_tests.cpp  compositor_tests.cpp  decoder_tests.cpp  export_tests.cpp  gpu_tests.cpp  linked_edit_tests.cpp  media_tests.cpp  model_tests.cpp  project_io_tests.cpp  time_tests.cpp
tools/: devshell.ps1  setup-devenv.ps1
